--- a/Guan_Ziyuan_Assignment5/ReadMe
+++ b/Guan_Ziyuan_Assignment5/ReadMe
@@ -26,6 +26,6 @@ How To Run The Program:
 Results:
 ----------------------------
 1. Satisfy the requests of the assignments and Checked with userapp.c
-2. Solved the bugs and upload to github: www.github.com/Chesterguan/Advanced System Programming
+2. Solved the bugs and upload to github: www.github.com/Chesterguan/Advanced_System_Programming
 ============================
 
